ptbr: translated cheat-sheet

--- a/dialogs/cheatsheet.html
+++ b/dialogs/cheatsheet.html
@@ -47,95 +47,95 @@
     <div class="content-body">
         <div class="main-content">
             <div>
-                <h4 id="cheatsheet-headers">Headers</h4>
+                <h4 id="cheatsheet-headers" data-locale="dialogs.cheatsheet.headers">Headers</h4>
                 <div class="item top">
-                    <h1 style="margin:0">#<span style="opacity: 50%;"> Header 1</span></h1>
+                    <h1 style="margin:0">#<span style="opacity: 50%;" data-locale="dialogs.cheatsheet.headers.header1"> Header 1</span></h1>
                 </div>
                 <div class="item">
-                    <h2 style="margin:0">#<span style="opacity: 50%;"> Header 2</span></h2>
+                    <h2 style="margin:0">##<span style="opacity: 50%;" data-locale="dialogs.cheatsheet.headers.header2"> Header 2</span></h2>
                 </div>
                 <div class="item bottom">
-                    <h3 style="margin:0">#<span style="opacity: 50%;"> Header 3</span></h3>
+                    <h3 style="margin:0">###<span style="opacity: 50%;" data-locale="dialogs.cheatsheet.headers.header3"> Header 3</span></h3>
                 </div>
             </div>
 
             <div>
-                <h4 id="cheatsheet-styling">Styling</h4>
+                <h4 id="cheatsheet-styling" data-locale="dialogs.cheatsheet.styling">Styling</h4>
                 <div class="item top">
-                    <span>*<em style="opacity: 50%;">Emphasize.</em>*</span>
+                    <span>*<em style="opacity: 50%;" data-locale="dialogs.cheatsheet.styling.emphasize">Emphasize.</em>*</span>
                 </div>
                 <div class="item">
-                    <span>**<strong style="opacity: 50%;">Strong.</strong>**</span>
+                    <span>**<strong style="opacity: 50%;" data-locale="dialogs.cheatsheet.styling.strong">Strong.</strong>**</span>
                 </div>
                 <div class="item">
-                    <span>==<mark style="opacity: 50%;">Marked text.</mark>==</span>
+                    <span>==<mark style="opacity: 50%;" data-locale="dialogs.cheatsheet.styling.marked-text">Marked text.</mark>==</span>
                 </div>
                 <div class="item">
-                    <span>~~<del style="opacity: 50%;">Mistaken text.</del>~~</span>
+                    <span>~~<del style="opacity: 50%;" data-locale="dialogs.cheatsheet.styling.mistaken-text">Mistaken text.</del>~~</span>
                 </div>
                 <div class="item">
-                    <span>__<u style="opacity: 50%;">Underlined text.</u>__</span>
+                    <span>__<u style="opacity: 50%;" data-locale="dialogs.cheatsheet.styling.underlined-text">Underlined text.</u>__</span>
                 </div>
                 <div class="item">
-                    <span style="display: flex; align-items: center;">> <blockquote style="opacity: 50%; margin: 0; padding: 20px; border-left: 2px solid var(--border-light-color);">Quoted text.</blockquote></span>
+                    <span style="display: flex; align-items: center;">> <blockquote style="opacity: 50%; margin: 0; padding: 20px; border-left: 2px solid var(--border-light-color);" data-locale="dialogs.cheatsheet.styling.quoted-text">Quoted text.</blockquote></span>
                 </div>
                 <div class="item">
-                    <span><span style="opacity: 50%;">H</span>~<sub style="opacity: 50%;">2</sub>~<span style="opacity: 50%;">O is a liquid.</span></span>
+                    <span data-locale="dialogs.cheatsheet.styling.subscript" data-locale-html><span style="opacity: 50%;">H</span>~<sub style="opacity: 50%;">2</sub>~<span style="opacity: 50%;">O is a liquid.</span></span>
                 </div>
                 <div class="item bottom">
-                    <span><span style="opacity: 50%;">2</span>^<sup style="opacity: 50%;">10</sup>^<span style="opacity: 50%;"> is 1024.</span></span>
+                    <span data-locale="dialogs.cheatsheet.styling.superscript" data-locale-html><span style="opacity: 50%;">2</span>^<sup style="opacity: 50%;">10</sup>^<span style="opacity: 50%;"> is 1024.</span></span>
                 </div>
             </div>
 
             <div>
-                <h4 id="cheatsheet-lists">Lists</h4>
+                <h4 id="cheatsheet-lists" data-locale="dialogs.cheatsheet.lists">Lists</h4>
                 <div class="item top">
                     <span>
-                        - <span style="opacity: 50%;">Item</span><br>
-                        * <span style="opacity: 50%;">Item</span><br>
-                        + <span style="opacity: 50%;">Item</span>
+                        - <span style="opacity: 50%;" data-locale="dialogs.cheatsheet.lists.ul.item">Item</span><br>
+                        * <span style="opacity: 50%;" data-locale="dialogs.cheatsheet.lists.ul.item">Item</span><br>
+                        + <span style="opacity: 50%;" data-locale="dialogs.cheatsheet.lists.ul.item">Item</span>
                     </span>
                 </div>
                 <div class="item">
                     <span>
-                        1. <span style="opacity: 50%;">Item 1</span><br>
-                        2. <span style="opacity: 50%;">Item 2</span><br>
-                        3. <span style="opacity: 50%;">Item 3</span>
+                        1. <span style="opacity: 50%;" data-locale="dialogs.cheatsheet.lists.ol.item-1">First item</span><br>
+                        2. <span style="opacity: 50%;" data-locale="dialogs.cheatsheet.lists.ol.item-2">Second item</span><br>
+                        3. <span style="opacity: 50%;" data-locale="dialogs.cheatsheet.lists.ol.item-3">Third item</span>
                     </span>
                 </div>
                 <div class="item bottom">
                     <span>
-                        - [ ] <span style="opacity: 50%;">Incomplete item</span><br>
-                        - [x] <span style="opacity: 50%;">Complete item</span>
+                        - [ ] <span style="opacity: 50%;"  data-locale="dialogs.cheatsheet.lists.tl.incomplete">Incomplete item</span><br>
+                        - [x] <span style="opacity: 50%;"  data-locale="dialogs.cheatsheet.lists.tl.complete">Complete item</span>
                     </span>
                 </div>
             </div>
 
             <div>
-                <h4 id="cheatsheet-links">Links</h4>
+                <h4 id="cheatsheet-links" data-locale="dialogs.cheatsheet.links">Links</h4>
                 <div class="item top">
-                    <span><span style="opacity: 50%;">Visit</span> &lt;https://example.com&gt;<span style="opacity: 50%;">.</span></span>
+                    <span data-locale="dialogs.cheatsheet.links.link-1" data-locale-html><span style="opacity: 50%;">Visit</span> &lt;https://example.com&gt;<span style="opacity: 50%;">.</span></span>
                 </div>
                 <div class="item">
-                    <span><span style="opacity: 50%;">A</span> [link](https://example.com)<span style="opacity: 50%;">.</span></span>
+                    <span data-locale="dialogs.cheatsheet.links.link-2" data-locale-html><span style="opacity: 50%;">A</span> [link](https://example.com)<span style="opacity: 50%;">.</span></span>
                 </div>
                 <div class="item">
-                    <span><span style="opacity: 50%;">An email address:</span> &lt;mail@example.com&gt;<span style="opacity: 50%;">.</span></span>
+                    <span data-locale="dialogs.cheatsheet.links.link-3" data-locale-html><span style="opacity: 50%;">An email address:</span> &lt;mail@example.com&gt;<span style="opacity: 50%;">.</span></span>
                 </div>
                 <div class="item bottom">
-                    <span><span style="opacity: 50%;">An image:</span> ![Alt](resources/image.png)<span style="opacity: 50%;">.</span></span>
+                    <span data-locale="dialogs.cheatsheet.links.link-4" data-locale-html><span style="opacity: 50%;">An image:</span> ![Alt](resources/image.png)<span style="opacity: 50%;">.</span></span>
                 </div>
             </div>
 
             <div>
-                <h4 id="cheatsheet-code">Code</h4>
+                <h4 id="cheatsheet-code" data-locale="dialogs.cheatsheet.code">Code</h4>
                 <div class="item top">
-                    <span><span style="opacity: 50%;">Some </span>`<code style="opacity: 50%;">inline code</code>`<span style="opacity: 50%;">.</span></span>
+                    <span data-locale="dialogs.cheatsheet.code.inline" data-locale-html><span style="opacity: 50%;">Some </span>`<code style="opacity: 50%;">inline code</code>`<span style="opacity: 50%;">.</span></span>
                 </div>
                 <div class="item">
                     <span>
                         ```<br>
-                        <code style="opacity: 50%;">// A code block</code><br>
+                        <code style="opacity: 50%;" data-locale="dialogs.cheatsheet.code.block">// A code block</code><br>
                         <code style="opacity: 50%;">var foo = 'bar';</code><br>
                         ```
                     </span>
@@ -143,7 +143,7 @@
                 <div class="item bottom">
                     <span>
                         ```javascript<br>
-                        <code style="opacity: 50%;">// An highlighted block</code><br>
+                        <code style="opacity: 50%;" data-locale="dialogs.cheatsheet.code.highlighted">// An highlighted block</code><br>
                         <code style="opacity: 50%;"><span style="color: var(--hljs-keyword);">var</span> <span style="color: var(--hljs-function);">foo</span> <span style="color: var(--hljs-variable);">=</span> <span style="color: var(--hljs-string);">'bar'</span>;</code><br>
                         ```
                     </span>
@@ -151,35 +151,35 @@
             </div>
 
             <div>
-                <h4 id="cheatsheet-tables">Tables</h4>
+                <h4 id="cheatsheet-tables" data-locale="dialogs.cheatsheet.tables">Tables</h4>
                 <div class="item top">
-                    <pre><code>Item     | Value
+                    <pre><code data-locale="dialogs.cheatsheet.tables.table-1">Item     | Value
 -------- | -----
 Computer | $1600
 Phone    | $12
 Pipe     | $1</code></pre>
                 </div>
                 <div class="item bottom">
-                    <pre><code>| Column 1 | Column 2      |
+                    <pre><code  data-locale="dialogs.cheatsheet.tables.table-2">| Column 1 | Column 2      |
 |:--------:| -------------:|
 | centered | right-aligned |</code></pre>
                 </div>
             </div>
 
             <div>
-                <h4 id="cheatsheet-definition-lists">Definition lists</h4>
+                <h4 id="cheatsheet-definition-lists" data-locale="dialogs.cheatsheet.definition-lists">Definition lists</h4>
                 <div class="item both">
                     <span>
                         <span style="opacity: 50%;">Markdown</span><br>
-                        : <span style="opacity: 50%;">Text-to-HTML conversion tool</span>
+                        : <span style="opacity: 50%;" data-locale="dialogs.cheatsheet.definition-lists-definition">Text-to-HTML conversion tool</span>
                     </span>
                 </div>
             </div>
 
             <div>
-                <h4 id="cheatsheet-abbreviations">Abbreviations</h4>
+                <h4 id="cheatsheet-abbreviations" data-locale="dialogs.cheatsheet.abbreviations">Abbreviations</h4>
                 <div class="item both">
-                    <span>
+                    <span data-locale="dialogs.cheatsheet.abbreviations.html" data-locale-html>
                         <span style="opacity: 50%;">Markdown converts text to</span> <abbr title="HyperText Markup Language">HTML</abbr><span style="opacity: 50%;">.</span><br>
 
                         *[HTML]: HyperText Markup Language
@@ -187,7 +187,7 @@ Pipe     | $1</code></pre>
                 </div>
             </div>
 
-            <p>Visit the <a href="https://github.com/flarom/cohesion/wiki">Cohesion Wiki</a> to learn more.</p>
+            <p data-locale="dialogs.cheatsheet.learn-more" data-locale-html>Visit the <a href="https://github.com/flarom/cohesion/wiki">Cohesion Wiki</a> to learn more.</p>
         </div>
     </div>
     <script>
@@ -221,6 +221,10 @@ Pipe     | $1</code></pre>
                     break;                    
             }
         }
+
+        cacheOriginalContent();
+        cacheOriginalAttributes();
+        applyLanguage();
     </script>
 </body>
 </html>
