ptbr translation: translated macros dialog

--- a/dialogs/cheatsheet.html
+++ b/dialogs/cheatsheet.html
@@ -187,7 +187,10 @@ Pipe     | $1</code></pre>
                 </div>
             </div>
 
-            <p data-locale="dialogs.cheatsheet.learn-more" data-locale-html>Visit the <a href="https://github.com/flarom/cohesion/wiki">Cohesion Wiki</a> to learn more.</p>
+            <p data-locale="dialogs.cheatsheet.learn-more" data-locale-html
+                data-locale-vars='{"cohesionWiki":"<a href=\"https://github.com/flarom/cohesion/wiki\">Cohesion Wiki</a>"}'>
+                Visit the <a href="https://github.com/flarom/cohesion/wiki">Cohesion Wiki</a> to learn more.
+            </p>
         </div>
     </div>
     <script>
