--- a/about.html
+++ b/about.html
@@ -148,7 +148,13 @@
                 <div class="setting top bottom">
                     <div>
                         <p>Copyright (C) ${new Date().getFullYear()}, Flarom.</p>
-                        <p data-locale="dialogs.about.legal.notice" data-locale-html>This application comes with absolutely no warranty. It is licensed under the <a href='https://www.gnu.org/licenses/gpl-3.0.html' target='_blank'>GNU GPL v3</a>.</p>
+                        <p data-locale="dialogs.about.legal.notice"
+                            data-locale-html
+                            data-locale-vars='${JSON.stringify({
+                                licenseLink: `<a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GNU GPL v3</a>`
+                            })}'
+                            This application comes with absolutely no warranty. It is licensed under the <a href='https://www.gnu.org/licenses/gpl-3.0.html' target='_blank'>GNU GPL v3</a>.
+                        </p>
                     </div>
                 </div>
             </div>
