disabled broken figcaptions

--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
                     'keys', // kbd support
                     'footnotes', // footnotes support
                     'embed', // embed support
-                    'figureCaption', // figure and figcaption support
+                    //'figureCaption', // figure and figcaption support
                     'style',
                     'blocks'
                 ],
